--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "nodemailer": "^6.7.8",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/nodemailer": "^6.4.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
